# optimuzz

./: .gitignore  .gitmodules  .ocamlformat  Dockerfile  Makefile  README.md  build-turbotv.sh  build.sh  dune  hugo.toml  optimuzz.install  optimuzz.opam  package-lock.json  package.json  pattern.pat  turbotv-fuzzilli-requirements.txt
.github/ISSUE_TEMPLATE/: reproduce.md
.github/workflows/: check.yml
Alive2/: build.sh
content/posts/: 2024-bug-release.md  pldi-2025-paper.md  wrong-approximation-of-alive2.md
csmith-runtime/: Makefile  cmake_install.cmake  libcsmith.so.0.0.0
docs/: index.html  index.xml  sitemap.xml
docs/categories/: index.html  index.xml
docs/css/: style.css
docs/posts/: index.html  index.xml
docs/tags/: index.html  index.xml
instrumentation/: .gitignore  InstPass.cpp  Makefile  coverage.cpp
layouts/: index.html
layouts/_default/: baseof.html  single.html
layouts/partials/: footer.html
public/: index.html  sitemap.xml
public/categories/: index.xml
public/posts/: index.html  index.xml
public/tags/: index.xml
scripts/: alive.sh  cfg_preprocess.py  continuous.sh  edit_rule.py  install-clang-13.sh  install-swift.sh  llvm20.sh  repro-turbofan.sh  test-turbofan.sh
seed/: Makefile  arith0.c  arith1.c  array0.c
seeds/seed_55291/: bsdtar:InstCombineMulDivRem.cpp:visitURem:3.ll  bsdtar:InstCombineMulDivRem.cpp:visitURem:4.ll  df:InstCombineMulDivRem.cpp:visitURem:4.ll  factor:InstCombineMulDivRem.cpp:visitURem:4.ll  firejail:InstCombineMulDivRem.cpp:visitURem:4.ll  fold:InstCombineMulDivRem.cpp:visitURem:4.ll  git:InstCombineMulDivRem.cpp:visitURem:3.ll  git:InstCombineMulDivRem.cpp:visitURem:4.ll  gzip:InstCombineMulDivRem.cpp:visitURem:4.ll  head:InstCombineMulDivRem.cpp:visitURem:4.ll  ln:InstCombineMulDivRem.cpp:visitURem:4.ll  make-prime-list:InstCombineMulDivRem.cpp:visitURem:4.ll  objdump:InstCombineMulDivRem.cpp:visitURem:3.ll  objdump:InstCombineMulDivRem.cpp:visitURem:4.ll  optipng:InstCombineMulDivRem.cpp:visitURem:4.ll  readelf:InstCombineMulDivRem.cpp:visitURem:4.ll  strings:InstCombineMulDivRem.cpp:visitURem:4.ll  sum:InstCombineMulDivRem.cpp:visitURem:3.ll  (+6 more)
src/: check_corpus.ml  config.ml  coverage.ml  distance.ml  domain.ml  dune  fuzzer.ml  llmutate.ml  main.ml  mutation.ml  mutator.ml  oracle.ml  pattern.ml  seedpool.ml  utils.ml
src/coverage/: aflgo.ml  avg_dist.ml  dafl_score.ml  domain.ml  dune  gcov.ml  icfg.ml  line.ml  measurer.ml  measurer.mli  min_dist.ml  path.mli  path_set.ml  path_set.mli  sancov.ml
src/fuzz/: ast_distance_based.ml  domain.ml  dune  edge_cov_based.ml  fuzzer.ml  fuzzer.mli  mutator.ml  mutator.mli  sliced_cfg_edge_cov_based.ml
src/mutation/: domain.ml  driver.ml  dune  mutator.ml
src/oracle/: dune  oracle.ml
src/pattern/: IR.ml  dune  instantiation.ml  parser.ml
src/program/: check_corpus.ml  clean.ml  cov.ml  distance.ml  dune  llmutate.ml  pattern_check.ml
src/seedcorpus/: ast_distance_based.ml  domain.ml  dune  edge_cov_based.ml  prep.ml  seedpool.ml  seedpool.mli  sliced_cfg_edge_cov_based.ml
src/util/: LUtil.ml  aLlvm.ml  aUtil.ml  dune  llvm_ext_ocaml.cpp  llvm_ext_ocaml.h  opHelper.ml  opcodeClass.ml
test/: dune  mutate.t
test/coverage/: dune  edge.test1.cov  test.ml  test1.cov  test1.expected  test2.cov  test2.expected
tools/: build.py  fuzz.py  harvest.py  targetline.expected  targetline.py  turbofan-reproduce.py  tv.py
(+2424 files in other folders)
