(executable
 (name main)
 (modules :standard)
 (libraries
  llvm
  llvm.bitreader
  llvm.irreader
  llvm.transform_utils
  str
  unix
  util
  logger
  ocamlgraph))

(executable
 (name llmutate)
 (modules llmutate mutator config)
 (libraries util))

(executable
 (name check_corpus)
 (modules check_corpus oracle config)
 (libraries util domainslib progress))

(executable
 (name distance)
 (modules distance coverage)
 (libraries util ocamlgraph))
