(library
 (name util)
 (modules aLlvm aUtil)
 (libraries
  llvm
  llvm.irreader
  llvm.analysis
  llvm.transform_utils
  str
  unix
  logger)
 (foreign_stubs
  (language cxx)
  (names llvm_ext_ocaml)
  (flags
   :standard
   (-I/usr/local/include/llvm/
    -D_GNU_SOURCE
    -D__STDC_CONSTANT_MACROS
    -D__STDC_FORMAT_MACROS
    -D__STDC_LIMIT_MACROS
    -std=c++17)))
 (c_library_flags
  (-L/usr/local/lib/ -lLLVMCore -lstdc++)))
